<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    xmlns:android="http://schemas.android.com/apk/res/android">


       <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        app:theme="@style/Toolbar"
        app:popupTheme="@style/Toolbar_Popup"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />


        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeSession"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerSessions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical">

            </android.support.v7.widget.RecyclerView>

        </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
