<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout" />

</menu>